fixed the bug of the style not showing on the p tag also added font color to the p tag

--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
     h1{
     color: red;
     text-align: center;
-    font-family: monospace 
+    font-family: monospace;
     }
 
     p{
-    font-family: monospace 
+    color:blue;
+    font-family: monospace ;
     }
 
 
